<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragment.SignupFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_view1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gravitas_one"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline1" />

            <TextView
                android:id="@id/text_view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view1" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardview1"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view2">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:textSize="14sp"
                        android:hint="@string/enter_your_username"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/usr"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@id/cardview1"
                app:layout_constraintStart_toStartOf="@id/cardview1"
                app:layout_constraintTop_toTopOf="@id/cardview1" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardview2"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardview1">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:textSize="14sp"
                        android:hint="@string/enter_your_email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/email"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@id/cardview2"
                app:layout_constraintStart_toStartOf="@id/cardview2"
                app:layout_constraintTop_toTopOf="@id/cardview2" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardview3"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardview2">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:textSize="14sp"
                        android:hint="@string/enter_your_pass"
                        android:inputType="textPassword"
                        android:paddingTop="15dp" />

                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/password"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@id/cardview3"
                app:layout_constraintStart_toStartOf="@id/cardview3"
                app:layout_constraintTop_toTopOf="@id/cardview3" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardview4"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardview3">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/verifypass_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:textSize="14sp"
                        android:hint="@string/re_enter_your_pass"
                        android:inputType="textPassword"
                        android:paddingTop="15dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/re_enter_password"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@id/cardview4"
                app:layout_constraintStart_toStartOf="@id/cardview4"
                app:layout_constraintTop_toTopOf="@id/cardview4" />

            <ImageView
                android:layout_width="280dp"
                android:layout_height="70dp"
                android:id="@+id/btn_signup"
                android:src="@drawable/btn_gradient"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardview4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="28sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/btn_signup"
                app:layout_constraintStart_toStartOf="@id/btn_signup"
                app:layout_constraintTop_toTopOf="@id/btn_signup"
                app:layout_constraintBottom_toBottomOf="@id/btn_signup"/>

            <TextView
                android:id="@id/text_view3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/black"
                android:layout_marginTop="2dp"
                app:layout_constraintTop_toBottomOf="@id/btn_signup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/loginFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/text_view3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/btn_signup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:indeterminateTint="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/cardview4" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>